gcc/testsuite/g++.dg/gomp/map-3.C
// PR c++/106858
// { dg-additional-options "-fopenmp -fsanitize=undefined" }

class A {
  void f() {
    #pragma omp target map(this->f) // { dg-error "member function" }
    ;
  }
};
